[tool.poetry]
name = "isPrintingPress"
version = "1.0.0-beta.1"
description = "A tool to place text and images onto a Pillow image object."
authors = ["hysrx <github@rxyth.co>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/InterestingSystems/PrintingPress"
keywords = ["imaging", "Pillow", "PIL", "text", "font"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: MIT License"
]
packages = [
    { include = "PrintingPress", from = "sr" },
]

[tool.poetry.dependencies]
python = "^3.6"
Pillow = "==8.0.1"

[tool.poetry.dev-dependencies]
pytest = "==6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
